corrected dark mode color issue

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ h1 {
 
 input#new-todo {
   width: 100%;
+  background-color: var(--list-bg);
   border: none;
   font-size: 12px;
   vertical-align: middle;
